[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/PlayerDetector.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 0.25, 0.25 )

[node name="PlayerDetector" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlayerDetector_body_exited"]
